--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,17 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://localhost:3306/portfolioap?useSSL=false&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#AMBIENTE DE PRUEBA
+#spring.datasource.url=jdbc:mysql://localhost:3306/portfolioap?useSSL=false&serverTimezone=UTC
+#spring.datasource.username=root
+#spring.datasource.password=
 spring.cors
+
+#AMBIENTE DE PRODUCCI\u00d3N
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.url=jdbc:mysql://u06fxhgbsloqqedz:XvG2ctrpKFz6klCzoc7A@bx2ov7dwwluprskb7n8p-mysql.services.clever-cloud.com:3306/bx2ov7dwwluprskb7n8p
+spring.datasource.username=u06fxhgbsloqqedz
+spring.datasource.password=XvG2ctrpKFz6klCzoc7A
+
+
+#JWT
+jwt.secret = secret
+jwt.expiration = 3600
